--- a/app/react-native/package.json
+++ b/app/react-native/package.json
@@ -49,14 +49,14 @@
   "dependencies": {
     "@emotion/core": "^10.0.20",
     "@emotion/native": "^10.0.14",
-    "@storybook/addons": "~6.3",
-    "@storybook/channel-websocket": "~6.3",
-    "@storybook/channels": "~6.3",
-    "@storybook/client-api": "~6.3",
-    "@storybook/client-logger": "~6.3",
-    "@storybook/core-client": "~6.3",
-    "@storybook/core-events": "~6.3",
-    "@storybook/csf": "0.0.1",
+    "@storybook/addons": "next",
+    "@storybook/channel-websocket": "next",
+    "@storybook/channels": "next",
+    "@storybook/client-api": "next",
+    "@storybook/client-logger": "next",
+    "@storybook/core-client": "next",
+    "@storybook/core-events": "next",
+    "@storybook/csf": "0.0.2--canary.87bc651.0",
     "chokidar": "^3.5.1",
     "commander": "^8.2.0",
     "emotion-theming": "^10.0.19",
