Prepare succeeded WIP

--- a/addons/ondevice-actions/package.json
+++ b/addons/ondevice-actions/package.json
@@ -26,15 +26,15 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/addons": "~6.3",
-    "@storybook/core-events": "~6.3",
+    "@storybook/addons": "^6.5.0-alpha.60",
+    "@storybook/core-events": "^6.5.0-alpha.60",
     "fast-deep-equal": "^2.0.1"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "~6.3"
+    "@storybook/addon-actions": "^6.5.0-alpha.60"
   },
   "peerDependencies": {
-    "@storybook/addon-actions": "~6.3",
+    "@storybook/addon-actions": "^6.5.0-alpha.60",
     "react": "*",
     "react-native": "*"
   },
