--- a/addons/ondevice-notes/package.json
+++ b/addons/ondevice-notes/package.json
@@ -29,11 +29,11 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.20",
-    "@storybook/addons": "~6.3",
-    "@storybook/api": "~6.3",
-    "@storybook/client-api": "~6.3",
-    "@storybook/client-logger": "~6.3",
-    "@storybook/core-events": "~6.3",
+    "@storybook/addons": "^6.5.0-alpha.60",
+    "@storybook/api": "^6.5.0-alpha.60",
+    "@storybook/client-api": "^6.5.0-alpha.60",
+    "@storybook/client-logger": "^6.5.0-alpha.60",
+    "@storybook/core-events": "^6.5.0-alpha.60",
     "core-js": "^3.0.1",
     "prop-types": "^15.7.2",
     "simple-markdown": "^0.7.3"
